// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CrownIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CrownIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="99.9 7.5 60.1 45"
>
  <path
    d="M158 14c-.3 0-.6 0-1 .3l-13.5 8.2h-.8c-.7 0-1-.4-1.4-.8l-9.8-13.4c-.4-.4-.8-.8-1.5-.8s-1 .4-1.5.8l-9.8 13.4c-.3.4-.7.8-1.5.8-.3 0-.7 0-.7-.4L103 14h-1c-1.3 0-2.4 1-2 2l6.8 27.5c.3.8 1 1.5 2.2 1.5h42.4c.7 0 1.5-.8 1.8-1.5L160 16c.4-1-.8-2-2-2zm-8 27.3h-40l-5-21.8 9.6 6c2.4 1.4 5.5.8 7.2-1.5l7.8-11.3 8 11.3c1.4 1.5 3.3 2.3 5.2 2.3 1 0 1.8-.4 3-.8l9.7-6-5.6 21.8zm1.8 7.5h-43.6c-.3 0-.7.3-.7.7v2c0 .6.4 1 .8 1h43c.4 0 .8-.4.8-.8V50c.5-1 0-1.3-.3-1.3z"
  />
</Icon>
`;

exports[`CrownIcon [common] example testing should match snapshot(s) for 2.clickable 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CrownIcon"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="99.9 7.5 60.1 45"
>
  <path
    d="M158 14c-.3 0-.6 0-1 .3l-13.5 8.2h-.8c-.7 0-1-.4-1.4-.8l-9.8-13.4c-.4-.4-.8-.8-1.5-.8s-1 .4-1.5.8l-9.8 13.4c-.3.4-.7.8-1.5.8-.3 0-.7 0-.7-.4L103 14h-1c-1.3 0-2.4 1-2 2l6.8 27.5c.3.8 1 1.5 2.2 1.5h42.4c.7 0 1.5-.8 1.8-1.5L160 16c.4-1-.8-2-2-2zm-8 27.3h-40l-5-21.8 9.6 6c2.4 1.4 5.5.8 7.2-1.5l7.8-11.3 8 11.3c1.4 1.5 3.3 2.3 5.2 2.3 1 0 1.8-.4 3-.8l9.7-6-5.6 21.8zm1.8 7.5h-43.6c-.3 0-.7.3-.7.7v2c0 .6.4 1 .8 1h43c.4 0 .8-.4.8-.8V50c.5-1 0-1.3-.3-1.3z"
  />
</Icon>
`;

exports[`CrownIcon [common] example testing should match snapshot(s) for 3.disabled 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CrownIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="99.9 7.5 60.1 45"
>
  <path
    d="M158 14c-.3 0-.6 0-1 .3l-13.5 8.2h-.8c-.7 0-1-.4-1.4-.8l-9.8-13.4c-.4-.4-.8-.8-1.5-.8s-1 .4-1.5.8l-9.8 13.4c-.3.4-.7.8-1.5.8-.3 0-.7 0-.7-.4L103 14h-1c-1.3 0-2.4 1-2 2l6.8 27.5c.3.8 1 1.5 2.2 1.5h42.4c.7 0 1.5-.8 1.8-1.5L160 16c.4-1-.8-2-2-2zm-8 27.3h-40l-5-21.8 9.6 6c2.4 1.4 5.5.8 7.2-1.5l7.8-11.3 8 11.3c1.4 1.5 3.3 2.3 5.2 2.3 1 0 1.8-.4 3-.8l9.7-6-5.6 21.8zm1.8 7.5h-43.6c-.3 0-.7.3-.7.7v2c0 .6.4 1 .8 1h43c.4 0 .8-.4.8-.8V50c.5-1 0-1.3-.3-1.3z"
  />
</Icon>
`;
